src/objects/Product_Rate_Plan_Information__c.object
<CustomObject>
    <description>Contains the main Rate Plans information to be displayed on the product browsing page UI</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the rate plan is available on the eCommerce website</description>
        <inlineHelpText>Uncheck to hide rate plan from the eCommerce website</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_As_Monthly_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display As Monthly Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IECUniqueRatePlan__c</fullName>
        <label>IECUniqueRatePlan</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Initial Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Most_Popular__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Most Popular</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Triable__c</fullName>
        <formula>IF(ISPICKVAL(Product_Rate_Plan__r.IsTriable__c, &apos;Yes&apos;), true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is a Trial rate plan (from Zuora)</inlineHelpText>
        <label>Is Triable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Zuora Rate Plan Object</description>
        <label>Related Product Rate Plan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>zqu__ProductRatePlan__c.zqu__Product__r.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Product Rate Plan Informations</relationshipLabel>
        <relationshipName>Product_Rate_Plan_Informations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_ID__c</fullName>
        <description>unique text field that will either be the Zuora Id or a unique Rate Plan Code</description>
        <label>Rate Plan ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Related_Product_Information__c</fullName>
        <label>Related Product Information</label>
        <referenceTo>Product_Information__c</referenceTo>
        <relationshipLabel>Product Rate Plans Information</relationshipLabel>
        <relationshipName>Product_Rate_Plans_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <defaultValue>12</defaultValue>
        <label>Renewal Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Single_Trial_Key__c</fullName>
        <label>Single Trial Key</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subscription_Usage_Qty__c</fullName>
        <description>Usage assigned to the subscription once purchased (for usage-base products). 0 or null for unlimited.</description>
        <inlineHelpText>Usage assigned to the subscription once purchased (for usage-base products). 0 or null for unlimited.</inlineHelpText>
        <label>Subscription Usage Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Interface_Display__c</fullName>
        <label>User Interface Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Rate Plan Information</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Related_Product_Information__c</columns>
        <columns>Product_Rate_Plan__c</columns>
        <columns>Active__c</columns>
        <columns>User_Interface_Display__c</columns>
        <columns>Short_Description__c</columns>
        <columns>Order__c</columns>
        <columns>IECUniqueRatePlan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Product_Rate_Plan__c</columns>
        <columns>Related_Product_Information__c</columns>
        <columns>Is_Triable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CheckACode_Rate_Plans</fullName>
        <columns>NAME</columns>
        <columns>Product_Rate_Plan__c</columns>
        <columns>Active__c</columns>
        <columns>User_Interface_Display__c</columns>
        <columns>Subscription_Usage_Qty__c</columns>
        <columns>Single_Trial_Key__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Product_Information__c</field>
            <operation>startsWith</operation>
            <value>CheckACode Web</value>
        </filters>
        <label>CheckACode Rate Plans</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EBC</fullName>
        <columns>NAME</columns>
        <columns>Short_Description__c</columns>
        <columns>Product_Rate_Plan__c</columns>
        <columns>Related_Product_Information__c</columns>
        <columns>Is_Triable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Related_Product_Information__c</field>
            <operation>contains</operation>
            <value>eBroadcast</value>
        </filters>
        <label>EBC</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Rate Plan Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Rate Plans Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>IECMonthlyPriceMandatory</fullName>
        <active>true</active>
        <description>Validation rule that makes Monthly Price mandatory when Display as Monthly fee is checked</description>
        <errorConditionFormula>AND(
Display_As_Monthly_Fee__c, 
ISBLANK(Monthly_Price__c))</errorConditionFormula>
        <errorDisplayField>Monthly_Price__c</errorDisplayField>
        <errorMessage>Monthly Price is mandatory when Display as Monthly fee is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IECRatePlansMandatoryFields</fullName>
        <active>true</active>
        <description>Validation Rule that checks for generic Mandatory fields</description>
        <errorConditionFormula>OR( 
ISBLANK(Short_Description__c), 
 LEN(Long_Description__c)=0, 
ISBLANK(Order__c))</errorConditionFormula>
        <errorMessage>The Short , Long Descriptions and Order are Mandatory fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IEC_Triable_Not_Monthly_fee</fullName>
        <active>true</active>
        <description>A triable Rate Plan cannot be displayed as monthly fee</description>
        <errorConditionFormula>AND( Is_Triable__c,  Display_As_Monthly_Fee__c)</errorConditionFormula>
        <errorMessage>A triable Rate Plan cannot be displayed as Monthly fee</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IEC_Triable_Not_Most_Popular</fullName>
        <active>true</active>
        <description>A triable Rate Plan cannot be most popular</description>
        <errorConditionFormula>AND( Is_Triable__c,  Is_Most_Popular__c )</errorConditionFormula>
        <errorMessage>A triable Rate Plan cannot be most popular</errorMessage>
    </validationRules>
</CustomObject>